# whatsapp-backup-chat-viewer

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE.md  README.md  README.txt  main.py  pyproject.toml  requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  issue-ticket.md
.github/workflows/: format-lint-check-ci.yml  tests-ci.yml  unit_test.yml
src/: builder.py  common.py  export_to_txt.py  models.py  resolver.py
src/call_log_extractor/: builder.py  resolver.py
src/chat_extractor/: builder.py  resolver.py
src/exports/: to_json.py  to_txt.py
tests/unit/: test_builder.py  test_call_log_builder.py  test_call_log_resolver.py  test_chat_builder.py  test_chat_resolver.py  test_common.py  test_exports_to_json.py  test_exports_to_txt.py  test_resolver.py
tests/unit/data/: expected_builder_results.py  expected_call_log_builder_results.py  expected_export_to_json_call_log.json  expected_export_to_json_chat.json  expected_export_to_txt_results.py  test_msgstore.db  test_wa.db
