[tool.poetry]
name = "whatsapp-backup-chat-viewer"
version = "0.0.0"
description = "Project to extract Whatsapp conversations from the app's SQLite database and exporting them as JSON or TXT files"
authors = ["Saurabh Ghanekar <ghanekarsaurabh8@gmail.com>"]
license = "BSD-2-Clause"
readme = "README.md"
homepage = ""
repository = ""
documentation = ""

include = [
    "README.md",
    "LICENSE.md",
    "CHANGELOG.md"
]

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^21.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
radon = "^5.1.0"
tox = "^3.25.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
